--- a/app/main.scss
+++ b/app/main.scss
@@ -1,3 +1,9 @@
-body {
-    background: red;
+#canvas {
+    display: block;
+    margin: 10px auto;
+    width: 600px;
+    height: 600px;
+    background: #eee;
+    transform: scale(1.0);
+    display: flex;
 }
