--- a/app/main.scss
+++ b/app/main.scss
@@ -1,7 +1,10 @@
+html,body {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+}
 #canvas {
-    display: block;
-    margin: 10px auto;
-    width: 600px;
-    height: 600px;
     background: #eee;
 }
